16901
{code}
scala> (List(1,2), List("a", "b"), List("c", "d")).zipped.map((x,y,z) => (y,x,z))
res0: List[(String, Int, String)] = List((a,1,c), (b,2,d))

scala> (List(1,2), List("a", "b"), List("c", "d")).zipped.map(_._1)
<console>:8: error: wrong number of parameters; expected = 3
              (List(1,2), List("a", "b"), List("c", "d")).zipped.map(_._1)
                                                                       ^
error: no-symbol does not have an owner (this is a bug: scala version 2.10.0-20120411-064552-c80d4afa1f)
{code}

The compiler correctly shows the error:
{code}
$ cat Test.scala
object Test extends App {
  println((List(1,2), List("a", "b"), List("c", "d")).zipped.map(_._1))
}
$ scalac Test.scala 
Test.scala:2: error: wrong number of parameters; expected = 3
  println((List(1,2), List("a", "b"), List("c", "d")).zipped.map(_._1))
                                                                   ^
one error found
{code}

PS: Don't mind the git hash that isn't in trunk yet, I was working on scaladoc.
